Backend/parser/gramatica_parser.go
// Code generated from Gramatica.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // Gramatica

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type GramaticaParser struct {
	*antlr.BaseParser
}

var GramaticaParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func gramaticaParserInit() {
	staticData := &GramaticaParserStaticData
	staticData.LiteralNames = []string{
		"", "'('", "')'", "'{'", "'}'", "'='", "';'", "'[]'", "'struct'", "','",
		"':'", "'+='", "'-='", "'++'", "'--'", "'['", "']'", "'default'", "'in'",
		"'!'", "'-'", "'&'", "'*'", "'.'", "'/'", "'%'", "'+'", "'>='", "'>'",
		"'<='", "'<'", "'=='", "'!='", "'&&'", "'||'", "'main'", "'fn'", "'mut'",
		"'println'", "'if'", "'else'", "'switch'", "'case'", "'for'", "'break'",
		"'continue'", "'return'", "'int'", "'f64'", "'bool'", "'string'", "",
		"'indexOf'", "'join'", "'len'", "'append'", "'Atoi'", "'parseFloat'",
		"'typeOf'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "MAIN", "FUNCTION", "MUT", "PRINT", "IF", "ELSE", "SWTCH", "CASE",
		"FOR", "TRANSFER_STATEMENT_BREAK", "TRANSFER_STATEMENT_CONTINUE", "TRANSFER_STATEMENT_RETURN",
		"PRIMITIVE_INT", "PRIMITIVE_FLOAT", "PRIMITIVE_BOOL", "PRIMITIVE_STRING",
		"BOOL", "INDEXOF", "JOIN", "LENGTH", "APPEND", "ATOI", "PARSEFLOAT",
		"TYPEOF", "ID", "FLOAT", "INT", "STRING", "LINE_COMMENT", "BLOCK_COMMENT",
		"WS",
	}
	staticData.RuleNames = []string{
		"program", "block", "statement", "mainfunction", "declaration", "parameters",
		"parameter", "tiposSlice", "struct_field", "lstStruct", "listSlice",
		"assignment", "print", "printList", "if", "elseIfBlock", "elseBlock",
		"switch", "caseBlock", "defaultBlock", "for", "individualBlock", "transferStatemen",
		"call", "arguments", "primitiveType", "slicePrimitiveValueFunction",
		"expression",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// GramaticaParserInit initializes any static state used to implement GramaticaParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewGramaticaParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func GramaticaParserInit() {
	staticData := &GramaticaParserStaticData
	staticData.once.Do(gramaticaParserInit)
}

// NewGramaticaParser produces a new parser instance for the optional input antlr.TokenStream.
func NewGramaticaParser(input antlr.TokenStream) *GramaticaParser {
	GramaticaParserInit()
	this := new(GramaticaParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &GramaticaParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Gramatica.g4"

	return this
}

// GramaticaParser tokens.
const (
	GramaticaParserEOF                         = antlr.TokenEOF
	GramaticaParserT__0                        = 1
	GramaticaParserT__1                        = 2
	GramaticaParserT__2                        = 3
	GramaticaParserT__3                        = 4
	GramaticaParserT__4                        = 5
	GramaticaParserT__5                        = 6
	GramaticaParserT__6                        = 7
	GramaticaParserT__7                        = 8
	GramaticaParserT__8                        = 9
	GramaticaParserT__9                        = 10
	GramaticaParserT__10                       = 11
	GramaticaParserT__11                       = 12
	GramaticaParserT__12                       = 13
	GramaticaParserT__13                       = 14
	GramaticaParserT__14                       = 15
	GramaticaParserT__15                       = 16
	GramaticaParserT__16                       = 17
	GramaticaParserT__17                       = 18
	GramaticaParserT__18                       = 19
	GramaticaParserT__19                       = 20
	GramaticaParserT__20                       = 21
	GramaticaParserT__21                       = 22
	GramaticaParserT__22                       = 23
	GramaticaParserT__23                       = 24
	GramaticaParserT__24                       = 25
	GramaticaParserT__25                       = 26
	GramaticaParserT__26                       = 27
	GramaticaParserT__27                       = 28
	GramaticaParserT__28                       = 29
	GramaticaParserT__29                       = 30
	GramaticaParserT__30                       = 31
	GramaticaParserT__31                       = 32
	GramaticaParserT__32                       = 33
	GramaticaParserT__33                       = 34
	GramaticaParserMAIN                        = 35
	GramaticaParserFUNCTION                    = 36
	GramaticaParserMUT                         = 37
	GramaticaParserPRINT                       = 38
	GramaticaParserIF                          = 39
	GramaticaParserELSE                        = 40
	GramaticaParserSWTCH                       = 41
	GramaticaParserCASE                        = 42
	GramaticaParserFOR                         = 43
	GramaticaParserTRANSFER_STATEMENT_BREAK    = 44
	GramaticaParserTRANSFER_STATEMENT_CONTINUE = 45
	GramaticaParserTRANSFER_STATEMENT_RETURN   = 46
	GramaticaParserPRIMITIVE_INT               = 47
	GramaticaParserPRIMITIVE_FLOAT             = 48
	GramaticaParserPRIMITIVE_BOOL              = 49
	GramaticaParserPRIMITIVE_STRING            = 50
	GramaticaParserBOOL                        = 51
	GramaticaParserINDEXOF                     = 52
	GramaticaParserJOIN                        = 53
	GramaticaParserLENGTH                      = 54
	GramaticaParserAPPEND                      = 55
	GramaticaParserATOI                        = 56
	GramaticaParserPARSEFLOAT                  = 57
	GramaticaParserTYPEOF                      = 58
	GramaticaParserID                          = 59
	GramaticaParserFLOAT                       = 60
	GramaticaParserINT                         = 61
	GramaticaParserSTRING                      = 62
	GramaticaParserLINE_COMMENT                = 63
	GramaticaParserBLOCK_COMMENT               = 64
	GramaticaParserWS                          = 65
)

// GramaticaParser rules.
const (
	GramaticaParserRULE_program                     = 0
	GramaticaParserRULE_block                       = 1
	GramaticaParserRULE_statement                   = 2
	GramaticaParserRULE_mainfunction                = 3
	GramaticaParserRULE_declaration                 = 4
	GramaticaParserRULE_parameters                  = 5
	GramaticaParserRULE_parameter                   = 6
	GramaticaParserRULE_tiposSlice                  = 7
	GramaticaParserRULE_struct_field                = 8
	GramaticaParserRULE_lstStruct                   = 9
	GramaticaParserRULE_listSlice                   = 10
	GramaticaParserRULE_assignment                  = 11
	GramaticaParserRULE_print                       = 12
	GramaticaParserRULE_printList                   = 13
	GramaticaParserRULE_if                          = 14
	GramaticaParserRULE_elseIfBlock                 = 15
	GramaticaParserRULE_elseBlock                   = 16
	GramaticaParserRULE_switch                      = 17
	GramaticaParserRULE_caseBlock                   = 18
	GramaticaParserRULE_defaultBlock                = 19
	GramaticaParserRULE_for                         = 20
	GramaticaParserRULE_individualBlock             = 21
	GramaticaParserRULE_transferStatemen            = 22
	GramaticaParserRULE_call                        = 23
	GramaticaParserRULE_arguments                   = 24
	GramaticaParserRULE_primitiveType               = 25
	GramaticaParserRULE_slicePrimitiveValueFunction = 26
	GramaticaParserRULE_expression                  = 27
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Block() IBlockContext
	EOF() antlr.TerminalNode

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GramaticaParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GramaticaParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GramaticaParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) Block() IBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(GramaticaParserEOF, 0)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GramaticaListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GramaticaListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GramaticaVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GramaticaParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, GramaticaParserRULE_program)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(56)
		p.Block()
	}
	{
		p.SetState(57)
		p.Match(GramaticaParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IBlockContext is an interface to support dynamic dispatch.
type IBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllStatement() []IStatementContext
	Statement(i int) IStatementContext

	// IsBlockContext differentiates from other interfaces.
	IsBlockContext()
}

type BlockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlockContext() *BlockContext {
	var p = new(BlockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GramaticaParserRULE_block
	return p
}

func InitEmptyBlockContext(p *BlockContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GramaticaParserRULE_block
}

func (*BlockContext) IsBlockContext() {}

func NewBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlockContext {
	var p = new(BlockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GramaticaParserRULE_block

	return p
}

func (s *BlockContext) GetParser() antlr.Parser { return s.parser }

func (s *BlockContext) AllStatement() []IStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatementContext); ok {
			len++
		}
	}

	tst := make([]IStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatementContext); ok {
			tst[i] = t.(IStatementContext)
			i++
		}
	}

	return tst
}

func (s *BlockContext) Statement(i int) IStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *BlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GramaticaListener); ok {
		listenerT.EnterBlock(s)
	}
}

func (s *BlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GramaticaListener); ok {
		listenerT.ExitBlock(s)
	}
}

func (s *BlockContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GramaticaVisitor:
		return t.VisitBlock(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GramaticaParser) Block() (localctx IBlockContext) {
	localctx = NewBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, GramaticaParserRULE_block)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(62)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&9221255408259694858) != 0 {
		{
			p.SetState(59)
			p.Statement()
		}

		p.SetState(64)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Mainfunction() IMainfunctionContext
	Declaration() IDeclarationContext
	Assignment() IAssignmentContext
	Print_() IPrintContext
	If_() IIfContext
	Switch_() ISwitchContext
	For_() IForContext
	IndividualBlock() IIndividualBlockContext
	TransferStatemen() ITransferStatemenContext
	Call() ICallContext

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GramaticaParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GramaticaParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GramaticaParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) Mainfunction() IMainfunctionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMainfunctionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMainfunctionContext)
}

func (s *StatementContext) Declaration() IDeclarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclarationContext)
}

func (s *StatementContext) Assignment() IAssignmentContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAssignmentContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAssignmentContext)
}

func (s *StatementContext) Print_() IPrintContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPrintContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPrintContext)
}

func (s *StatementContext) If_() IIfContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIfContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIfContext)
}

func (s *StatementContext) Switch_() ISwitchContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISwitchContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISwitchContext)
}

func (s *StatementContext) For_() IForContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IForContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IForContext)
}

func (s *StatementContext) IndividualBlock() IIndividualBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIndividualBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIndividualBlockContext)
}

func (s *StatementContext) TransferStatemen() ITransferStatemenContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITransferStatemenContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITransferStatemenContext)
}

func (s *StatementContext) Call() ICallContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICallContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICallContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GramaticaListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GramaticaListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (s *StatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GramaticaVisitor:
		return t.VisitStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GramaticaParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, GramaticaParserRULE_statement)
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(65)
			p.Mainfunction()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(66)
			p.Declaration()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(67)
			p.Assignment()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(68)
			p.Print_()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(69)
			p.If_()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(70)
			p.Switch_()
		}

	case 7:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(71)
			p.For_()
		}

	case 8:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(72)
			p.IndividualBlock()
		}

	case 9:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(73)
			p.TransferStatemen()
		}

	case 10:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(74)
			p.Call()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMainfunctionContext is an interface to support dynamic dispatch.
type IMainfunctionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	FUNCTION() antlr.TerminalNode
	MAIN() antlr.TerminalNode
	Block() IBlockContext

	// IsMainfunctionContext differentiates from other interfaces.
	IsMainfunctionContext()
}

type MainfunctionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMainfunctionContext() *MainfunctionContext {
	var p = new(MainfunctionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GramaticaParserRULE_mainfunction
	return p
}

func InitEmptyMainfunctionContext(p *MainfunctionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GramaticaParserRULE_mainfunction
}

func (*MainfunctionContext) IsMainfunctionContext() {}

func NewMainfunctionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MainfunctionContext {
	var p = new(MainfunctionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GramaticaParserRULE_mainfunction

	return p
}

func (s *MainfunctionContext) GetParser() antlr.Parser { return s.parser }

func (s *MainfunctionContext) FUNCTION() antlr.TerminalNode {
	return s.GetToken(GramaticaParserFUNCTION, 0)
}

func (s *MainfunctionContext) MAIN() antlr.TerminalNode {
	return s.GetToken(GramaticaParserMAIN, 0)
}

func (s *MainfunctionContext) Block() IBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *MainfunctionContext) GetRuleContext() antlr.RuleContext {
	return s
}
